--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -5,9 +5,10 @@ RUN apk add --update --no-cache gawk shadow openjdk8 bash curl && mkdir -p /opt/
 RUN curl $ZOOKEEPER_URL --output /tmp/zookeeper.tgz && tar zxvf /tmp/zookeeper.tgz --strip-components 1 -C /opt/zookeeper && \
 touch /opt/zookeeper/conf/zoo.cfg && rm -rf /tmp/zookeeper.tgz
 COPY run.sh /usr/bin/run.sh
-RUN adduser -D app && usermod -aG root app && chown -R app:0 /opt /home/app && chmod -R 0775 /opt /home/app
+RUN adduser -D app && usermod -aG root app && chown -R app /opt /home/app && chmod -R g=u /opt /home/app && \
+chgrp -R 0 /opt /home/app 
 USER app
-EXPOSE 2181
+EXPOSE 2181 8080
 ENV HOME /home/app
 ENTRYPOINT ["/usr/bin/run.sh"]
 CMD ["/opt/zookeeper/conf/zoo.cfg"]
